--- a/.github/workflows/vuong.yml
+++ b/.github/workflows/vuong.yml
@@ -10,8 +10,8 @@ jobs:
       max-parallel: 5
       fail-fast: false
       matrix:
-        go: [1.0, 1.1, 1.2, 1.3, 1.35, 1.40, 1,45]
-        flag: [A, B, C, D, E, F, G, H, I, L, K]
+        go: [1.0, 1.1, 1.2, 1.3, 1,35]
+        flag: [A, B, C, D, E, F, G, H, I]
     env:
         NUM_JOBS: 20
         JOB: ${{ matrix.go }}
